[package]
name = "quill"
version = "0.1.0"
edition = "2021"

[features]
encryption = ["dep:aes-gcm", "dep:blake3", "dep:rand"]

[dependencies]
aes-gcm = { version = "0.10.3", optional = true }
blake3 = { version = "1.5.5", optional = true }
futures = "0.3.31"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
rand = { version = "0.8", optional = true }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.8"
